# AI-Voice-Controller

./: README.md  service.txt
mission/: service.txt
project/: AUTHORS  CMakeLists.txt  NOTICE  org.tizen.voice-control-panel.xml
project/packaging/: org.tizen.voice-control-panel.spec
project/res/: CMakeLists.txt
project/res/edje/: CMakeLists.txt  voice-control-panel.edc
project/res/po/: CMakeLists.txt  en_US.po  ko_KR.po
project/src/: resource.c  resource.h  resource_internal.h  voice_control_panel_action.c  voice_control_panel_action.h  voice_control_panel_command.c  voice_control_panel_command.h  voice_control_panel_main.c  voice_control_panel_main.h  voice_control_panel_touchevent.c  voice_control_panel_touchevent.h  voice_control_panel_vc.c  voice_control_panel_vc.h  voice_control_panel_view.c  voice_control_panel_view.h
project/src/resource/: resource_led.c  resource_led.h  resource_led_internal.h  resource_relay.c  resource_relay.h  resource_relay_internal.h
