CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_SUBDIRECTORY(edje)
ADD_SUBDIRECTORY(po)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/images/Voice_control_icon_mic.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/images/Voice_control_icon_mute.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/images/Voice_control_icon_setting.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/images/Voice_control_icon_arrow.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/images/Voice_control_icon_close.png DESTINATION ${IMAGEDIR})